--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -6,6 +6,7 @@ $themeDark: (
   blue: #5fb3b3,
   orange: #f99157,
   purple: #c594c5,
+  red: #c94a4a,
   fontSize: 18px,
   fontFamily: #{'Inconsolata', monospace},
 );
