--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,6 +17,7 @@
       width: 100%;
       margin: 0;
       padding: 0;
+      background-color: #1B2B34;
     }
 
     #terminal-container {
@@ -25,7 +26,7 @@
   </style>
 
   <div id="terminal-container"></div>
-  <script src="demo.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
